class Carre(x : Int,y : Int, cote : Int) : Rectangle(x,y , cote, cote)