package ihm.td1.figures;




class Figure{

    //TODO
}
