package ihm.td1.figures;



class Groupe{
    //TODO

}
