package ihm.td1.figures;




class Segment{
    //TODO
}
