package ihm.td1.figures;




interface Dessinable {
//TODO
}
