package ihm.td1.figures;




class FormeGeometrique{
//TODO

}
