package ihm.td1.figures;



class Point{

    //TODO
}
